<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <jp.co.soramitsu.sora_ui.controls.DefaultToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/wallet_send_to_eth_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/sidedButtonLayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/currency_header"
                layout="@layout/account_selector_header" />

            <View
                android:id="@+id/currency_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_padding_content_by_side"
                android:layout_marginEnd="@dimen/margin_padding_content_by_side"
                android:background="@color/thickBorder" />

            <include layout="@layout/account_selector_amount" />

            <LinearLayout
                android:id="@+id/transactionFeeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_content_by_side"
                android:layout_marginTop="@dimen/margin_padding_content_by_side"
                android:layout_marginEnd="@dimen/margin_padding_content_by_side"
                android:layout_marginBottom="@dimen/margin_padding_description">

                <TextView
                    android:id="@+id/transactionFeeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/wallet_transaction_fee"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/preloader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_padding_content_by_side"
                android:layout_marginEnd="@dimen/margin_padding_content_by_side"
                android:background="@color/thinBorder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_content_by_side">

                <TextView
                    android:id="@+id/accountDescriptionTitleTextView"
                    style="@style/TextAppearance.Soramitsu.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_eth_address"
                    android:textColor="@color/subtitleGrey" />

                <EditText
                    android:id="@+id/accountDescriptionBodyTextView"
                    style="@style/TextAppearance.Soramitsu.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:digits="0123456789abcdefABCDEFx"
                    android:hint="@string/wallet_eth_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="2"
                    android:maxLength="42"
                    android:paddingTop="@dimen/margin_padding_content_by_side"
                    android:paddingBottom="@dimen/margin_padding_content_by_side"
                    tools:text="text" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/greyBackground"
        android:orientation="horizontal"
        android:paddingStart="@dimen/x2_5"
        android:paddingTop="12dp"
        android:paddingEnd="@dimen/x2_5"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/descriptionText"
            style="@style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Widget.Soramitsu.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_next"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>