<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <jp.co.soramitsu.sora_ui.controls.DefaultToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/wallet_transaction_confirmation_title" />

    <TextView
        android:id="@+id/headerText"
        style="@style/TextAppearance.Soramitsu.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:text="@string/wallet_transaction_confirmation_header"
        android:textColor="@color/informationTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/thickBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerText" />

    <LinearLayout
        android:id="@+id/transactionAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:id="@+id/transactionAmountTitle"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_amount_to_send"
            android:textColor="@color/informationTextColor" />

        <ImageView
            android:id="@+id/transactionAmountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_minus"
            tools:text="400" />

        <TextView
            android:id="@+id/transactionAmountText"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            tools:text="- 100" />
    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/thinBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionAmount" />

    <LinearLayout
        android:id="@+id/transactionFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider5">

        <TextView
            android:id="@+id/transactionFeeTitle"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_transaction_fee"
            android:textColor="@color/informationTextColor" />

        <TextView
            android:id="@+id/transactionFeeText"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            tools:text="- 100" />
    </LinearLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/thinBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionFee" />

    <LinearLayout
        android:id="@+id/transactionTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider6">

        <TextView
            android:id="@+id/transactionTotalAmountTitle"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_total_amount"
            android:textColor="@color/informationTextColor" />

        <ImageView
            android:id="@+id/transactionTotalAmountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_minus"
            tools:text="400" />

        <TextView
            android:id="@+id/transactionTotalAmountText"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            tools:text="- 100" />

    </LinearLayout>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:background="@color/thinBorder"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionTotalAmount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transactionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_by_side"
        android:layout_marginTop="@dimen/margin_padding_by_side"
        android:layout_marginEnd="@dimen/margin_padding_by_side"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider7">

        <TextView
            android:id="@+id/transactionDescriptionTitle"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wallet_description"
            android:textColor="@color/informationTextColor"
            app:layout_constraintBottom_toTopOf="@+id/transactionDescriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/transactionDescriptionText"
            style="@style/TextAppearance.Soramitsu.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactionDescriptionTitle"
            tools:text="For cofee" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/greyBackground"
        android:paddingTop="@dimen/margin_padding_content"
        android:paddingBottom="@dimen/margin_padding_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/descriptionImg"
            android:layout_width="@dimen/side_button_icon_size"
            android:layout_height="@dimen/side_button_icon_size"
            android:layout_marginStart="@dimen/margin_padding_by_side"
            android:layout_marginTop="@dimen/margin_padding_by_side"
            android:layout_marginBottom="@dimen/margin_padding_by_side"
            android:src="@color/lightRed"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_by_side"
            android:layout_marginEnd="@dimen/margin_padding_by_side"
            android:lineSpacingExtra="5sp"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/descriptionImg"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Processing fee" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Widget.Soramitsu.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_by_side"
            android:text="@string/common_send"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/descriptionTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>